--- a/notebooks/hypothesis7_eda.ipynb
+++ b/notebooks/hypothesis7_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -391,17 +391,31 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['foul_tip', 'ball', 'foul', 'called_strike', 'swinging_strike',\n",
+       "       'hit_into_play', 'blocked_ball', 'foul_bunt', 'hit_by_pitch',\n",
+       "       'swinging_strike_blocked', 'missed_bunt', 'pitchout',\n",
+       "       'bunt_foul_tip'], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(df.shape)\n",
     "display(df.head(10))\n",
-    "#df.to_csv('combined_data.csv', index=False)"
+    "#df.to_csv('combined_data.csv', index=False)\n",
+    "df.description.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -442,22 +456,414 @@
     "columns = ['game_date', 'player_name', 'batter', 'pitcher','zone',\n",
     "       'stand', 'p_throws', 'home_team', 'away_team', 'plate_x', 'plate_z',\n",
     "       'outs_when_up', 'inning', 'inning_topbot',\n",
-    "       'pitch_name',\n",
+    "       'pitch_name', 'description',\n",
     "       'home_score', 'away_score', 'delta_home_win_exp', 'delta_run_exp']\n",
     "\n",
     "first_pitch_df = first_pitch_df[columns]\n",
     "first_pitch_df = first_pitch_df.dropna(axis=0)\n",
     "first_pitch_df['labeled_pitch'] = ['Fastball' if 'Fastball' in str(x) else 'Off Speed' for x in first_pitch_df.pitch_name]\n",
+    "first_pitch_df['labeled_outcome'] = ['strike' if x in ['foul_tip', 'foul', 'called_strike', 'swinging_strike',\n",
+    "                                                      'foul_bunt', 'swinging_strike_blocked', 'missed_bunt', 'bunt_foul_tip'] \n",
+    "                                     else x for x in first_pitch_df.description]\n",
+    "first_pitch_df['labeled_outcome'] = ['ball' if x in ['ball', 'blocked_ball', 'hit_by_pitch', 'pitchout'\n",
+    "                                                      ] else x for x in first_pitch_df.labeled_outcome]\n",
+    "\n",
+    "first_pitch_df['labeled_outcome'] = ['hit' if x == 'hit_into_play' else x for x in first_pitch_df['labeled_outcome']]\n",
+    "\n",
     "print(df.columns)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "first_pitch_df.to_csv('../data/first_pitch_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>game_date</th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>batter</th>\n",
+       "      <th>pitcher</th>\n",
+       "      <th>zone</th>\n",
+       "      <th>stand</th>\n",
+       "      <th>p_throws</th>\n",
+       "      <th>home_team</th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>plate_x</th>\n",
+       "      <th>...</th>\n",
+       "      <th>inning</th>\n",
+       "      <th>inning_topbot</th>\n",
+       "      <th>pitch_name</th>\n",
+       "      <th>description</th>\n",
+       "      <th>home_score</th>\n",
+       "      <th>away_score</th>\n",
+       "      <th>delta_home_win_exp</th>\n",
+       "      <th>delta_run_exp</th>\n",
+       "      <th>labeled_pitch</th>\n",
+       "      <th>labeled_outcome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2022-10-02</td>\n",
+       "      <td>Zastryzny, Rob</td>\n",
+       "      <td>663993</td>\n",
+       "      <td>642239</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>L</td>\n",
+       "      <td>L</td>\n",
+       "      <td>LAA</td>\n",
+       "      <td>TEX</td>\n",
+       "      <td>-0.83</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Top</td>\n",
+       "      <td>Curveball</td>\n",
+       "      <td>swinging_strike</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.017</td>\n",
+       "      <td>Off Speed</td>\n",
+       "      <td>strike</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2022-10-02</td>\n",
+       "      <td>Zastryzny, Rob</td>\n",
+       "      <td>608369</td>\n",
+       "      <td>642239</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>L</td>\n",
+       "      <td>L</td>\n",
+       "      <td>LAA</td>\n",
+       "      <td>TEX</td>\n",
+       "      <td>-1.09</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Top</td>\n",
+       "      <td>Curveball</td>\n",
+       "      <td>swinging_strike</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.024</td>\n",
+       "      <td>Off Speed</td>\n",
+       "      <td>strike</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2022-10-02</td>\n",
+       "      <td>Zastryzny, Rob</td>\n",
+       "      <td>543760</td>\n",
+       "      <td>642239</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>LAA</td>\n",
+       "      <td>TEX</td>\n",
+       "      <td>-0.75</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Top</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>called_strike</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.034</td>\n",
+       "      <td>Fastball</td>\n",
+       "      <td>strike</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2022-10-02</td>\n",
+       "      <td>Santana, Dennis</td>\n",
+       "      <td>660271</td>\n",
+       "      <td>642701</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>LAA</td>\n",
+       "      <td>TEX</td>\n",
+       "      <td>-0.91</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Bot</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>swinging_strike</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.049</td>\n",
+       "      <td>Fastball</td>\n",
+       "      <td>strike</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2022-10-02</td>\n",
+       "      <td>Santana, Dennis</td>\n",
+       "      <td>545361</td>\n",
+       "      <td>642701</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>LAA</td>\n",
+       "      <td>TEX</td>\n",
+       "      <td>-0.26</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Bot</td>\n",
+       "      <td>Sinker</td>\n",
+       "      <td>foul</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.024</td>\n",
+       "      <td>Off Speed</td>\n",
+       "      <td>strike</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695178</th>\n",
+       "      <td>2022-04-07</td>\n",
+       "      <td>Ohtani, Shohei</td>\n",
+       "      <td>493329</td>\n",
+       "      <td>660271</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>LAA</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Top</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>swinging_strike</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.061</td>\n",
+       "      <td>Fastball</td>\n",
+       "      <td>strike</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695184</th>\n",
+       "      <td>2022-04-07</td>\n",
+       "      <td>Ohtani, Shohei</td>\n",
+       "      <td>670541</td>\n",
+       "      <td>660271</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>LAA</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td>-0.39</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Top</td>\n",
+       "      <td>Slider</td>\n",
+       "      <td>called_strike</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.036</td>\n",
+       "      <td>Off Speed</td>\n",
+       "      <td>strike</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695189</th>\n",
+       "      <td>2022-04-07</td>\n",
+       "      <td>Ohtani, Shohei</td>\n",
+       "      <td>608324</td>\n",
+       "      <td>660271</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>LAA</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td>-1.02</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Top</td>\n",
+       "      <td>Slider</td>\n",
+       "      <td>ball</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.042</td>\n",
+       "      <td>Off Speed</td>\n",
+       "      <td>ball</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695190</th>\n",
+       "      <td>2022-04-07</td>\n",
+       "      <td>Ohtani, Shohei</td>\n",
+       "      <td>488726</td>\n",
+       "      <td>660271</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>LAA</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Top</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>hit_into_play</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.025</td>\n",
+       "      <td>0.262</td>\n",
+       "      <td>Fastball</td>\n",
+       "      <td>hit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695195</th>\n",
+       "      <td>2022-04-07</td>\n",
+       "      <td>Ohtani, Shohei</td>\n",
+       "      <td>514888</td>\n",
+       "      <td>660271</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>LAA</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td>1.32</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Top</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>ball</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.034</td>\n",
+       "      <td>Fastball</td>\n",
+       "      <td>ball</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>178531 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         game_date      player_name  batter  pitcher  zone stand p_throws  \\\n",
+       "5       2022-10-02   Zastryzny, Rob  663993   642239  13.0     L        L   \n",
+       "10      2022-10-02   Zastryzny, Rob  608369   642239  13.0     L        L   \n",
+       "13      2022-10-02   Zastryzny, Rob  543760   642239   7.0     R        L   \n",
+       "18      2022-10-02  Santana, Dennis  660271   642701  11.0     L        R   \n",
+       "24      2022-10-02  Santana, Dennis  545361   642701   5.0     R        R   \n",
+       "...            ...              ...     ...      ...   ...   ...      ...   \n",
+       "695178  2022-04-07   Ohtani, Shohei  493329   660271   5.0     R        R   \n",
+       "695184  2022-04-07   Ohtani, Shohei  670541   660271   1.0     L        R   \n",
+       "695189  2022-04-07   Ohtani, Shohei  608324   660271  11.0     R        R   \n",
+       "695190  2022-04-07   Ohtani, Shohei  488726   660271   2.0     L        R   \n",
+       "695195  2022-04-07   Ohtani, Shohei  514888   660271  14.0     R        R   \n",
+       "\n",
+       "       home_team away_team  plate_x  ...  inning  inning_topbot  \\\n",
+       "5            LAA       TEX    -0.83  ...       9            Top   \n",
+       "10           LAA       TEX    -1.09  ...       9            Top   \n",
+       "13           LAA       TEX    -0.75  ...       9            Top   \n",
+       "18           LAA       TEX    -0.91  ...       8            Bot   \n",
+       "24           LAA       TEX    -0.26  ...       8            Bot   \n",
+       "...          ...       ...      ...  ...     ...            ...   \n",
+       "695178       LAA       HOU     0.07  ...       1            Top   \n",
+       "695184       LAA       HOU    -0.39  ...       1            Top   \n",
+       "695189       LAA       HOU    -1.02  ...       1            Top   \n",
+       "695190       LAA       HOU     0.05  ...       1            Top   \n",
+       "695195       LAA       HOU     1.32  ...       1            Top   \n",
+       "\n",
+       "             pitch_name      description home_score away_score  \\\n",
+       "5             Curveball  swinging_strike          8          3   \n",
+       "10            Curveball  swinging_strike          8          3   \n",
+       "13      4-Seam Fastball    called_strike          8          3   \n",
+       "18      4-Seam Fastball  swinging_strike          8          3   \n",
+       "24               Sinker             foul          8          3   \n",
+       "...                 ...              ...        ...        ...   \n",
+       "695178  4-Seam Fastball  swinging_strike          0          0   \n",
+       "695184           Slider    called_strike          0          0   \n",
+       "695189           Slider             ball          0          0   \n",
+       "695190  4-Seam Fastball    hit_into_play          0          0   \n",
+       "695195  4-Seam Fastball             ball          0          0   \n",
+       "\n",
+       "        delta_home_win_exp  delta_run_exp  labeled_pitch  labeled_outcome  \n",
+       "5                    0.000         -0.017      Off Speed           strike  \n",
+       "10                   0.000         -0.024      Off Speed           strike  \n",
+       "13                   0.000         -0.034       Fastball           strike  \n",
+       "18                   0.000         -0.049       Fastball           strike  \n",
+       "24                   0.000         -0.024      Off Speed           strike  \n",
+       "...                    ...            ...            ...              ...  \n",
+       "695178               0.000         -0.061       Fastball           strike  \n",
+       "695184               0.000         -0.036      Off Speed           strike  \n",
+       "695189               0.000          0.042      Off Speed             ball  \n",
+       "695190              -0.025          0.262       Fastball              hit  \n",
+       "695195               0.000          0.034       Fastball             ball  \n",
+       "\n",
+       "[178531 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_pitch_df"
    ]
   },
   {
