updated scripts for hyp 1 and 4

--- a/notebooks/hypothesis4_eda.ipynb
+++ b/notebooks/hypothesis4_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -43,42 +43,44 @@
        "       'home_score', 'away_score', 'bat_score', 'fld_score', 'post_away_score',\n",
        "       'post_home_score', 'post_bat_score', 'post_fld_score',\n",
        "       'if_fielding_alignment', 'of_fielding_alignment', 'spin_axis',\n",
-       "       'delta_home_win_exp', 'delta_run_exp'],\n",
+       "       'delta_home_win_exp', 'delta_run_exp', 'team'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('../data/statcast_04_04_2022_10_03_2022.csv')\n",
+    "\n",
+    "df['team'] = [row['away_team'] if row['inning_topbot'] == 'Top' else row['home_team'] for index,row in df.iterrows()]\n",
     "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/dimitriospsaltos/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:11: SettingWithCopyWarning: \n",
+      "/Users/dimitriospsaltos/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  # This is added back by InteractiveShellApp.init_path()\n"
+      "  if sys.path[0] == '':\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['game_date', 'release_speed', 'outs_when_up', 'pitch_name',\n",
+      "Index(['game_date', 'release_speed', 'outs_when_up', 'team', 'pitch_name',\n",
       "       'home_score', 'away_score'],\n",
       "      dtype='object')\n"
      ]
@@ -349,7 +351,7 @@
        "32             2     Split-Finger      87.284409"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,8 +364,9 @@
     "           'release_speed',\n",
     "       'outs_when_up',\n",
     "#            'inning', 'inning_topbot',\n",
-    "           'pitch_name',\n",
-    "       'home_score', 'away_score']\n",
+    "         'team',  'pitch_name',\n",
+    "       'home_score', 'away_score'\n",
+    "          ]\n",
     "filtered = df[columns]\n",
     "filtered['game_date'] = pd.to_datetime(filtered.game_date)\n",
     "print(filtered.columns)\n",
@@ -375,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -402,6 +405,7 @@
        "      <th>game_date</th>\n",
        "      <th>pitch_type</th>\n",
        "      <th>outs_when_up</th>\n",
+       "      <th>team</th>\n",
        "      <th>n_pitches</th>\n",
        "      <th>mean_pitch_speed</th>\n",
        "    </tr>\n",
@@ -412,40 +416,45 @@
        "      <td>2022-04-07</td>\n",
        "      <td>4-Seam Fastball</td>\n",
        "      <td>0</td>\n",
-       "      <td>248</td>\n",
-       "      <td>93.647177</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>20</td>\n",
+       "      <td>95.755000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2022-04-07</td>\n",
        "      <td>4-Seam Fastball</td>\n",
-       "      <td>1</td>\n",
-       "      <td>176</td>\n",
-       "      <td>93.936364</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>26</td>\n",
+       "      <td>93.830769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2022-04-07</td>\n",
        "      <td>4-Seam Fastball</td>\n",
-       "      <td>2</td>\n",
-       "      <td>235</td>\n",
-       "      <td>93.767660</td>\n",
+       "      <td>0</td>\n",
+       "      <td>CIN</td>\n",
+       "      <td>29</td>\n",
+       "      <td>96.165517</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2022-04-07</td>\n",
-       "      <td>Changeup</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
        "      <td>0</td>\n",
-       "      <td>73</td>\n",
-       "      <td>84.452055</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>15</td>\n",
+       "      <td>92.553333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2022-04-07</td>\n",
-       "      <td>Changeup</td>\n",
-       "      <td>1</td>\n",
-       "      <td>75</td>\n",
-       "      <td>84.033333</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>0</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td>19</td>\n",
+       "      <td>95.984211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -454,81 +463,100 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4499</th>\n",
-       "      <td>2022-10-02</td>\n",
-       "      <td>Slider</td>\n",
-       "      <td>1</td>\n",
-       "      <td>312</td>\n",
-       "      <td>84.392628</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4500</th>\n",
-       "      <td>2022-10-02</td>\n",
-       "      <td>Slider</td>\n",
-       "      <td>2</td>\n",
-       "      <td>316</td>\n",
-       "      <td>84.294620</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4501</th>\n",
-       "      <td>2022-10-02</td>\n",
-       "      <td>Split-Finger</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19</td>\n",
-       "      <td>85.952632</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4502</th>\n",
-       "      <td>2022-10-02</td>\n",
-       "      <td>Split-Finger</td>\n",
-       "      <td>1</td>\n",
-       "      <td>22</td>\n",
-       "      <td>85.327273</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4503</th>\n",
+       "      <th>76568</th>\n",
        "      <td>2022-10-02</td>\n",
        "      <td>Split-Finger</td>\n",
        "      <td>2</td>\n",
-       "      <td>14</td>\n",
-       "      <td>84.542857</td>\n",
+       "      <td>CHC</td>\n",
+       "      <td>5</td>\n",
+       "      <td>81.380000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76569</th>\n",
+       "      <td>2022-10-02</td>\n",
+       "      <td>Split-Finger</td>\n",
+       "      <td>2</td>\n",
+       "      <td>CIN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>82.350000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76570</th>\n",
+       "      <td>2022-10-02</td>\n",
+       "      <td>Split-Finger</td>\n",
+       "      <td>2</td>\n",
+       "      <td>KC</td>\n",
+       "      <td>4</td>\n",
+       "      <td>86.950000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76571</th>\n",
+       "      <td>2022-10-02</td>\n",
+       "      <td>Split-Finger</td>\n",
+       "      <td>2</td>\n",
+       "      <td>STL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>89.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76572</th>\n",
+       "      <td>2022-10-02</td>\n",
+       "      <td>Split-Finger</td>\n",
+       "      <td>2</td>\n",
+       "      <td>TB</td>\n",
+       "      <td>2</td>\n",
+       "      <td>87.150000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4504 rows × 5 columns</p>\n",
+       "<p>76573 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      game_date       pitch_type  outs_when_up  n_pitches  mean_pitch_speed\n",
-       "0    2022-04-07  4-Seam Fastball             0        248         93.647177\n",
-       "1    2022-04-07  4-Seam Fastball             1        176         93.936364\n",
-       "2    2022-04-07  4-Seam Fastball             2        235         93.767660\n",
-       "3    2022-04-07         Changeup             0         73         84.452055\n",
-       "4    2022-04-07         Changeup             1         75         84.033333\n",
-       "...         ...              ...           ...        ...               ...\n",
-       "4499 2022-10-02           Slider             1        312         84.392628\n",
-       "4500 2022-10-02           Slider             2        316         84.294620\n",
-       "4501 2022-10-02     Split-Finger             0         19         85.952632\n",
-       "4502 2022-10-02     Split-Finger             1         22         85.327273\n",
-       "4503 2022-10-02     Split-Finger             2         14         84.542857\n",
+       "       game_date       pitch_type  outs_when_up team  n_pitches  \\\n",
+       "0     2022-04-07  4-Seam Fastball             0  ARI         20   \n",
+       "1     2022-04-07  4-Seam Fastball             0  ATL         26   \n",
+       "2     2022-04-07  4-Seam Fastball             0  CIN         29   \n",
+       "3     2022-04-07  4-Seam Fastball             0  CLE         15   \n",
+       "4     2022-04-07  4-Seam Fastball             0  HOU         19   \n",
+       "...          ...              ...           ...  ...        ...   \n",
+       "76568 2022-10-02     Split-Finger             2  CHC          5   \n",
+       "76569 2022-10-02     Split-Finger             2  CIN          2   \n",
+       "76570 2022-10-02     Split-Finger             2   KC          4   \n",
+       "76571 2022-10-02     Split-Finger             2  STL          1   \n",
+       "76572 2022-10-02     Split-Finger             2   TB          2   \n",
        "\n",
-       "[4504 rows x 5 columns]"
+       "       mean_pitch_speed  \n",
+       "0             95.755000  \n",
+       "1             93.830769  \n",
+       "2             96.165517  \n",
+       "3             92.553333  \n",
+       "4             95.984211  \n",
+       "...                 ...  \n",
+       "76568         81.380000  \n",
+       "76569         82.350000  \n",
+       "76570         86.950000  \n",
+       "76571         89.900000  \n",
+       "76572         87.150000  \n",
+       "\n",
+       "[76573 rows x 6 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# new_filter = filtered.groupby(['game_date', 'pitch_name', 'outs_when_up']).count()['home_score'].reset_index()\n",
-    "new_filter = filtered.groupby(['game_date', 'pitch_name', 'outs_when_up']).agg({'home_score': 'count',\n",
+    "new_filter = filtered.groupby(['game_date', 'pitch_name', 'outs_when_up','team']).agg({'home_score': 'count',\n",
     "                                                                   'release_speed': 'mean'}).reset_index()\n",
-    "new_filter.columns = ['game_date', 'pitch_type', 'outs_when_up', 'n_pitches',\n",
+    "new_filter.columns = ['game_date', 'pitch_type', 'outs_when_up', 'team', 'n_pitches',\n",
     "                     'mean_pitch_speed']\n",
-    "new_filter.to_csv('../data/hypothesis_4.csv')\n",
+    "new_filter.to_csv('../data/hypothesis_4_20221109.csv')\n",
     "new_filter"
    ]
   },
