--- a/notebooks/hypothesis1_eda.ipynb
+++ b/notebooks/hypothesis1_eda.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -69,20 +69,176 @@
       "min x:  -1.42 | max x:  1.35\n",
       "min z:  0.39 | max z:  4.56\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>game_date</th>\n",
+       "      <th>release_speed</th>\n",
+       "      <th>pitch_name</th>\n",
+       "      <th>plate_x</th>\n",
+       "      <th>plate_z</th>\n",
+       "      <th>team</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-10-02</td>\n",
+       "      <td>93.5</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>-0.76</td>\n",
+       "      <td>3.38</td>\n",
+       "      <td>TEX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-10-02</td>\n",
+       "      <td>80.9</td>\n",
+       "      <td>Curveball</td>\n",
+       "      <td>-0.66</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>TEX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-10-02</td>\n",
+       "      <td>92.3</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>-0.20</td>\n",
+       "      <td>3.12</td>\n",
+       "      <td>TEX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-10-02</td>\n",
+       "      <td>94.3</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>3.69</td>\n",
+       "      <td>TEX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-10-02</td>\n",
+       "      <td>93.4</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>-0.62</td>\n",
+       "      <td>2.19</td>\n",
+       "      <td>TEX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695191</th>\n",
+       "      <td>2022-04-07</td>\n",
+       "      <td>91.8</td>\n",
+       "      <td>Split-Finger</td>\n",
+       "      <td>-0.89</td>\n",
+       "      <td>2.05</td>\n",
+       "      <td>HOU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695192</th>\n",
+       "      <td>2022-04-07</td>\n",
+       "      <td>86.9</td>\n",
+       "      <td>Slider</td>\n",
+       "      <td>-0.64</td>\n",
+       "      <td>1.74</td>\n",
+       "      <td>HOU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695193</th>\n",
+       "      <td>2022-04-07</td>\n",
+       "      <td>99.2</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>1.53</td>\n",
+       "      <td>1.84</td>\n",
+       "      <td>HOU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695194</th>\n",
+       "      <td>2022-04-07</td>\n",
+       "      <td>97.9</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>-0.62</td>\n",
+       "      <td>2.01</td>\n",
+       "      <td>HOU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695195</th>\n",
+       "      <td>2022-04-07</td>\n",
+       "      <td>99.8</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>1.32</td>\n",
+       "      <td>-0.29</td>\n",
+       "      <td>HOU</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>695196 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         game_date  release_speed       pitch_name  plate_x  plate_z team\n",
+       "0       2022-10-02           93.5  4-Seam Fastball    -0.76     3.38  TEX\n",
+       "1       2022-10-02           80.9        Curveball    -0.66     0.49  TEX\n",
+       "2       2022-10-02           92.3  4-Seam Fastball    -0.20     3.12  TEX\n",
+       "3       2022-10-02           94.3  4-Seam Fastball     0.53     3.69  TEX\n",
+       "4       2022-10-02           93.4  4-Seam Fastball    -0.62     2.19  TEX\n",
+       "...            ...            ...              ...      ...      ...  ...\n",
+       "695191  2022-04-07           91.8     Split-Finger    -0.89     2.05  HOU\n",
+       "695192  2022-04-07           86.9           Slider    -0.64     1.74  HOU\n",
+       "695193  2022-04-07           99.2  4-Seam Fastball     1.53     1.84  HOU\n",
+       "695194  2022-04-07           97.9  4-Seam Fastball    -0.62     2.01  HOU\n",
+       "695195  2022-04-07           99.8  4-Seam Fastball     1.32    -0.29  HOU\n",
+       "\n",
+       "[695196 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# filter columns\n",
-    "columns = ['game_date', 'home_team', 'away_team', 'release_speed',\n",
-    "       'inning_topbot', 'pitch_name',\n",
-    "       'plate_x', 'plate_z', 'description']\n",
+    "df['team'] = [row['away_team'] if row['inning_topbot'] == 'Top' else row['home_team'] for index,row in df.iterrows()]\n",
+    "columns = ['game_date', 'release_speed', 'pitch_name',\n",
+    "       'plate_x', 'plate_z', 'team']\n",
     "filtered = df[columns]\n",
     "# avg_pitch_speeds = df.groupby('pitch_name').mean()['release_speed'].reset_index()\n",
     "# filtered.merge(avg_pitch_speeds, on = 'pitch_name')\n",
-    "# filtered.to_csv('../data/hypothesis_1_20221108.csv', index = False)\n",
-    "only_strikes = filtered[filtered.description == 'called_strike']\n",
+    "filtered.to_csv('../data/hypothesis_1_20221109.csv', index = False)\n",
+    "only_strikes = df[df.description == 'called_strike']\n",
     "print('min x: ',only_strikes.plate_x.min(), '|', 'max x: ', only_strikes.plate_x.max())\n",
-    "print('min z: ', only_strikes.plate_z.min(), '|', 'max z: ', only_strikes.plate_z.max())"
+    "print('min z: ', only_strikes.plate_z.min(), '|', 'max z: ', only_strikes.plate_z.max())\n",
+    "filtered\n"
    ]
   },
   {
