--- a/notebooks/hypothesis1_eda.ipynb
+++ b/notebooks/hypothesis1_eda.ipynb
@@ -17,49 +17,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['pitch_type', 'game_date', 'release_speed', 'release_pos_x',\n",
-       "       'release_pos_z', 'player_name', 'batter', 'pitcher', 'events',\n",
-       "       'description', 'spin_dir', 'spin_rate_deprecated',\n",
-       "       'break_angle_deprecated', 'break_length_deprecated', 'zone', 'des',\n",
-       "       'game_type', 'stand', 'p_throws', 'home_team', 'away_team', 'type',\n",
-       "       'hit_location', 'bb_type', 'balls', 'strikes', 'game_year', 'pfx_x',\n",
-       "       'pfx_z', 'plate_x', 'plate_z', 'on_3b', 'on_2b', 'on_1b',\n",
-       "       'outs_when_up', 'inning', 'inning_topbot', 'hc_x', 'hc_y',\n",
-       "       'tfs_deprecated', 'tfs_zulu_deprecated', 'fielder_2', 'umpire', 'sv_id',\n",
-       "       'vx0', 'vy0', 'vz0', 'ax', 'ay', 'az', 'sz_top', 'sz_bot',\n",
-       "       'hit_distance_sc', 'launch_speed', 'launch_angle', 'effective_speed',\n",
-       "       'release_spin_rate', 'release_extension', 'game_pk', 'pitcher.1',\n",
-       "       'fielder_2.1', 'fielder_3', 'fielder_4', 'fielder_5', 'fielder_6',\n",
-       "       'fielder_7', 'fielder_8', 'fielder_9', 'release_pos_y',\n",
-       "       'estimated_ba_using_speedangle', 'estimated_woba_using_speedangle',\n",
-       "       'woba_value', 'woba_denom', 'babip_value', 'iso_value',\n",
-       "       'launch_speed_angle', 'at_bat_number', 'pitch_number', 'pitch_name',\n",
-       "       'home_score', 'away_score', 'bat_score', 'fld_score', 'post_away_score',\n",
-       "       'post_home_score', 'post_bat_score', 'post_fld_score',\n",
-       "       'if_fielding_alignment', 'of_fielding_alignment', 'spin_axis',\n",
-       "       'delta_home_win_exp', 'delta_run_exp'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['pitch_type', 'game_date', 'release_speed', 'release_pos_x',\n",
+      "       'release_pos_z', 'player_name', 'batter', 'pitcher', 'events',\n",
+      "       'description', 'spin_dir', 'spin_rate_deprecated',\n",
+      "       'break_angle_deprecated', 'break_length_deprecated', 'zone', 'des',\n",
+      "       'game_type', 'stand', 'p_throws', 'home_team', 'away_team', 'type',\n",
+      "       'hit_location', 'bb_type', 'balls', 'strikes', 'game_year', 'pfx_x',\n",
+      "       'pfx_z', 'plate_x', 'plate_z', 'on_3b', 'on_2b', 'on_1b',\n",
+      "       'outs_when_up', 'inning', 'inning_topbot', 'hc_x', 'hc_y',\n",
+      "       'tfs_deprecated', 'tfs_zulu_deprecated', 'fielder_2', 'umpire', 'sv_id',\n",
+      "       'vx0', 'vy0', 'vz0', 'ax', 'ay', 'az', 'sz_top', 'sz_bot',\n",
+      "       'hit_distance_sc', 'launch_speed', 'launch_angle', 'effective_speed',\n",
+      "       'release_spin_rate', 'release_extension', 'game_pk', 'pitcher.1',\n",
+      "       'fielder_2.1', 'fielder_3', 'fielder_4', 'fielder_5', 'fielder_6',\n",
+      "       'fielder_7', 'fielder_8', 'fielder_9', 'release_pos_y',\n",
+      "       'estimated_ba_using_speedangle', 'estimated_woba_using_speedangle',\n",
+      "       'woba_value', 'woba_denom', 'babip_value', 'iso_value',\n",
+      "       'launch_speed_angle', 'at_bat_number', 'pitch_number', 'pitch_name',\n",
+      "       'home_score', 'away_score', 'bat_score', 'fld_score', 'post_away_score',\n",
+      "       'post_home_score', 'post_bat_score', 'post_fld_score',\n",
+      "       'if_fielding_alignment', 'of_fielding_alignment', 'spin_axis',\n",
+      "       'delta_home_win_exp', 'delta_run_exp'],\n",
+      "      dtype='object')\n",
+      "(695196, 92)\n"
+     ]
     }
    ],
    "source": [
     "df = pd.read_csv('../data/statcast_04_04_2022_10_03_2022.csv')\n",
-    "df.columns"
+    "print(df.columns)\n",
+    "print(df.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +220,7 @@
        "[695196 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,12 +228,11 @@
    "source": [
     "# filter columns\n",
     "df['team'] = [row['away_team'] if row['inning_topbot'] == 'Top' else row['home_team'] for index,row in df.iterrows()]\n",
-    "columns = ['game_date', 'release_speed', 'pitch_name',\n",
-    "       'plate_x', 'plate_z', 'team']\n",
+    "columns = ['game_date', 'release_speed', 'pitch_name', 'plate_x', 'plate_z', 'team']\n",
     "filtered = df[columns]\n",
     "# avg_pitch_speeds = df.groupby('pitch_name').mean()['release_speed'].reset_index()\n",
     "# filtered.merge(avg_pitch_speeds, on = 'pitch_name')\n",
-    "filtered.to_csv('../data/hypothesis_1_20221109.csv', index = False)\n",
+    "filtered.sample(175000).to_csv('../data/hypothesis_1_20221109_sample20perc.csv', index = False)\n",
     "only_strikes = df[df.description == 'called_strike']\n",
     "print('min x: ',only_strikes.plate_x.min(), '|', 'max x: ', only_strikes.plate_x.max())\n",
     "print('min z: ', only_strikes.plate_z.min(), '|', 'max z: ', only_strikes.plate_z.max())\n",
